Added integration with Keycloak in user management