@@ -1,12 +1,12 @@
 package nu.fgv.register.server.config;
 
-import org.springframework.cache.CacheManager;
+import org.springframework.boot.autoconfigure.cache.CacheManagerCustomizer;
 import org.springframework.cache.annotation.EnableCaching;
-import org.springframework.cache.concurrent.ConcurrentMapCache;
-import org.springframework.cache.support.SimpleCacheManager;
+import org.springframework.cache.concurrent.ConcurrentMapCacheManager;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -14,13 +14,13 @@ import java.util.List;
 public class CacheConfig {
 
     @Bean
-    public CacheManager cacheManager(final ConcurrentMapCache aclSpringCache) {
-        final SimpleCacheManager cacheManager = new SimpleCacheManager();
-        cacheManager.setCaches(List.of(
-                        aclSpringCache
-                )
-        );
-        return cacheManager;
+    public ConcurrentMapCacheManager cacheManager() {
+        return new ConcurrentMapCacheManager();
+    }
+
+    @Bean
+    public CacheManagerCustomizer<ConcurrentMapCacheManager> cacheManagerCustomizer() {
+        return cacheManager -> cacheManager.setCacheNames(Arrays.asList("roleRepresentations", "aclCache"));
     }
 
 }
